--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,14 +24,14 @@ jobs:
             source venv/bin/activate
             flake8 --exclude=venv* --statistics
             pytest -v
-#      - setup_remote_docker:
-#          docker_layer_caching: true
+      - setup_remote_docker:
+          docker_layer_caching: true
       # Step 4: Docker build
       - run:
           name: Build and Push Docker
           command: |
             source venv/bin/activate
-#            docker build -t poc/$IMAGE_NAME:$TAG .
-#            echo $DOCKER_PWD | docker login -u $DOCKER_LOGIN --password-stdin
-#            docker push ideaslocas/$IMAGE_NAME:$TAG
+            docker build -t poc/$IMAGE_NAME:$TAG .
+            echo $DOCKER_PWD | docker login -u $DOCKER_LOGIN --password-stdin
+            docker push ideaslocas/$IMAGE_NAME:$TAG
 #   Esto es para probarlo de nuevo
