--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,5 +14,17 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: install dependencies
+      run: Instalar dependencias    
+          command:|
+            python3 -m venv venv
+            source venv/bin/activate
+            pip install -r requirements.txt
+    - name: run tests
+      run: Pasar los Tests     
+          command:|
+            source venv/bin/activate
+            flake8 --exclude=venv* --statistics
+            pytest -v
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
