--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,15 +15,11 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: install dependencies
-      run: Instalar dependencias    
-          command:|
-            python3 -m venv venv
+      run:  python3 -m venv venv
             source venv/bin/activate
             pip install -r requirements.txt
     - name: run tests
-      run: Pasar los Tests     
-          command:|
-            source venv/bin/activate
+      run:  source venv/bin/activate
             flake8 --exclude=venv* --statistics
             pytest -v
     - name: Build the Docker image
