--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,9 +14,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: install dependencies
+    - name: ACtivar entorno virtual python
       run:  python3 -m venv venv
             source venv/bin/activate
+    - name: Instalar dependencias        
             pip install -r requirements.txt
     - name: run tests
       run:  source venv/bin/activate
