--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,7 +14,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Activar entorno virtual python
+    - name: Installer dependencies
       run:  python3 -m venv venv
             source venv/bin/activate
     - name: Instalar dependencias        
