--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,14 +14,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Installer dependencies
+    - name: install dependencies
       run:  python3 -m venv venv
             source venv/bin/activate
-    - name: Instalar dependencias        
             pip install -r requirements.txt
     - name: run tests
       run:  source venv/bin/activate
             flake8 --exclude=venv* --statistics
             pytest -v
     - name: Build the Docker image
-      run:  docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
