--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,11 +15,9 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: install dependencies
-      run:  source venv/bin/activate
-            pip install -r requirements.txt
+      run:  pip install -r requirements.txt
     - name: run tests
-      run:  source venv/bin/activate
-            flake8 --exclude=venv* --statistics
+      run:  flake8 --exclude=venv* --statistics
             pytest -v
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
