--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,8 +16,9 @@ jobs:
     - uses: actions/checkout@v2
     - name: install dependencies
       run:  pip install -r requirements.txt
-    - name: run tests
+    - name: run dependencies
       run:  flake8 --exclude=venv* --statistics
-            pytest -v
+    - name: run tests
+      run: pytest -v
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
