--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,7 +21,7 @@ jobs:
     - name: run tests
       run: pytest -v
     - name: Build the Docker image
-      run: #docker build . --file Dockerfile --tag my-image-name:$(date +%s)
-           docker build -t poc/$IMAGE_NAME:$TAG .
-           echo $DOCKER_PWD | docker login -u gersol --password-stdin
-           docker push ideaslocas/$IMAGE_NAME:$TAG
+      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+           #docker build -t poc/$IMAGE_NAME:$TAG .
+           #echo $DOCKER_PWD | docker login -u $DOCKER_LOGIN --password-stdin
+           #docker push ideaslocas/$IMAGE_NAME:$TAG
