--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,6 +14,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Install python3-venv
+      run:  sudo apt-get install python3-venv
     - name: install dependencies
       run:  pip install -r requirements.txt
     - name: run dependencies
