--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,6 +16,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install python3-venv
       run:  sudo apt-get install python3-venv
+    - name: arrancado entorno virtual
+      run:  python3 -m venv venv | ./venv/bin/activate | pip install -r requerimients.txt | flake8 --exclude=venv* --statistics | pytest -v
     - name: install dependencies
       run:  pip install -r requirements.txt
     - name: run dependencies
