--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,8 +17,7 @@ jobs:
     - name: Install python3-venv
       run:  sudo apt-get install python3-venv
     - name: arrancado entorno virtual
-      run:  command:| 
-            source /venv/bin/activate | pip install -r requerimients.txt 
+      run:  source activate | pip install -r requerimients.txt 
     - name: install dependencies
       run:  pip install -r requirements.txt
     - name: run dependencies
