--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ jobs:
           name: Build and Push Docker
           command: |
             source venv/bin/activate
-            docker build -t poc/$IMAGE_NAME:$TAG .
-            echo $DOCKER_PWD | docker login -u $DOCKER_LOGIN --password-stdin
-            docker push ideaslocas/$IMAGE_NAME:$TAG
+            docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+#            echo $DOCKER_PWD | docker login -u $DOCKER_LOGIN --password-stdin
+#            docker push ideaslocas/$IMAGE_NAME:$TAG
 #   Esto es para probarlo de nuevo
