--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
             flake8 --exclude=venv* --statistics
             pytest -v
       - setup_remote_docker:
-          docker_layer_caching: true
+          docker_layer_caching: false
       # Step 4: Docker build
       - run:
           name: Build and Push Docker
