--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,13 +25,13 @@ jobs:
             flake8 --exclude=venv* --statistics
             pytest -v
       - setup_remote_docker:
-          docker_layer_caching: false
+          docker_layer_caching: true
       # Step 4: Docker build
       - run:
           name: Build and Push Docker
           command: |
             source venv/bin/activate
             docker build . --file Dockerfile --tag my-image-name:$(date +%s)
-#            echo $DOCKER_PWD | docker login -u $DOCKER_LOGIN --password-stdin
-#            docker push ideaslocas/$IMAGE_NAME:$TAG
+            echo $DOCKER_PWD | docker login -u $DOCKER_LOGIN --password-stdin
+            docker push g3r5o1/$IMAGE_NAME:$TAG
 #   Esto es para probarlo de nuevo
