--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,7 +25,7 @@ jobs:
 #    - name: run tests
 #      run: pytest -v
     - name: Build the Docker image
-      run:  docker build -t $IMAGE_NAME:$TAG .
+      run:  docker build -f Dockerfile .
             source venv/bin/activate | docker build -t $IMAGE_NAME:$TAG .
             echo $DOCKER_PWD | docker login -u $DOCKER_LOGIN --password-stdin
             docker push g3r5o1/$IMAGE_NAME:$TAG
