--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,5 +27,5 @@ jobs:
     - name: Build the Docker image
       run:  docker build. --file Dockerfile --tag $IMAGE_NAME
             source venv/bin/activate | docker build -t $IMAGE_NAME:$TAG .
-            echo $DOCKER_PWD | docker login -u ${{ github.actor }} --password-stdin
-            docker push g3r5o1/$IMAGE_NAME:$TAG
+            #echo $DOCKER_PWD | docker login -u ${{ github.actor }} --password-stdin
+            #docker push g3r5o1/$IMAGE_NAME:$TAG
