--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,6 +26,6 @@ jobs:
 #      run: pytest -v
     - name: Build the Docker image
       run:  #docker build . --file Dockerfile --tag $IMAGE_NAME
-            source venv/bin/activate | docker build . --file Dockerfile --tag $IMAGE_NAME
+            source venv/bin/activate | docker build . --file Dockerfile --tag $IMAGE_NAME | docker push g3r5o1/$IMAGE_NAME:$TAG
             #echo $DOCKER_PWD | docker login -u ${{ github.actor }} --password-stdin
-            docker push g3r5o1/$IMAGE_NAME:$TAG
+            #docker push g3r5o1/$IMAGE_NAME:$TAG
