--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,8 +24,35 @@ jobs:
       run:  source venv/bin/activate | flake8 --exclude=venv* --statistics | pytest -v
 #    - name: run tests
 #      run: pytest -v
-    - name: Build the Docker image
-      run:  docker build Dockerfile --tag $IMAGE_NAME | docker push g3r5o1/$IMAGE_NAME:$TAG
+    - name: Build image
+      run: docker build . --file Dockerfile --tag $IMAGE_NAME
+
+    - name: Log into registry
+      run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
+
+    - name: Push image
+      run: |
+          IMAGE_ID=docker.pkg.github.com/${{ github.repository }}/$IMAGE_NAME
+
+          # Change all uppercase to lowercase
+          IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
+
+          # Strip git ref prefix from version
+          VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
+
+          # Strip "v" prefix from tag name
+          [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
+
+          # Use Docker `latest` tag convention
+          [ "$VERSION" == "main" ] && VERSION=latest
+
+          echo IMAGE_ID=$IMAGE_ID
+          echo VERSION=$VERSION
+
+          docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
+          docker push $IMAGE_ID:$VERSION
+#    - name: Build the Docker image
+#      run:  docker build Dockerfile --tag $IMAGE_NAME | docker push g3r5o1/$IMAGE_NAME:$TAG
             #source venv/bin/activate | docker build . --file Dockerfile --tag $IMAGE_NAME | docker push g3r5o1/$IMAGE_NAME:$TAG
             #echo $DOCKER_PWD | docker login -u ${{ github.actor }} --password-stdin
             #docker push g3r5o1/$IMAGE_NAME:$TAG
