--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -5,6 +5,10 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+    
+env:
+  # TODO: Change variable to your image's name.
+  IMAGE_NAME: myfirstpipeline
 
 jobs:
 
