--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,7 +9,7 @@ on:
 env:
   # TODO: Change variable to your image's name.
   IMAGE_NAME: myfirstpipeline
-  DOCKER_LOGIN: gersol1978@hotmail.com
+  #DOCKER_LOGIN: gersol1978@hotmail.com
 
 jobs:
 
@@ -61,7 +61,7 @@ jobs:
             #source venv/bin/activate | docker build . --file Dockerfile --tag $IMAGE_NAME | docker push g3r5o1/$IMAGE_NAME:$TAG
             #echo $DOCKER_PWD | docker login -u ${{ github.actor }} --password-stdin
             #docker push g3r5o1/$IMAGE_NAME:$TAG
-            docker build -t poc/$IMAGE_NAME:$TAG .
+            docker build -t g3r5o1/$IMAGE_NAME:$TAG .
             echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin | docker push g3r5o1/$IMAGE_NAME:$TAG
             #echo $DOCKER_PWD | docker login -u $DOCKER_LOGIN --password-L0sG00nie5.
             #docker push g3r5o1/$IMAGE_NAME:$TAG
